Bug fixes (#45)
* webapp stuff and visual fixes

* fix another time bug ughhh

* fix top of game screen being cut off, also try again seeding

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -191,4 +191,5 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     overscroll-behavior: none;
     overflow-x: hidden;
+    overflow-y: auto;
 }
